--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,6 +1,15 @@
 .App {
   text-align: center;
 }
+.black-nav{
+	background: black;
+	width: 100%;
+	display:flex;
+	color: white;
+	padding: 20px;
+	font-weight: 600;
+	font-size: 20px;
+}
 
 .App-logo {
   height: 40vmin;
