--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,23 @@
 .App {
   text-align: center;
+  background-color: white;
+  margin:auto;
+  width: 300px;
 }
-.black-nav{
-	background: black;
-	width: 100%;
-	display:flex;
-	color: white;
-	padding: 20px;
-	font-weight: 600;
-	font-size: 20px;
+.received{
+  text-align: left;
+  margin: 20px;
+}
+
+
+.black-nav {
+  background: rgb(35, 28, 28);
+  width: 100%;
+  display: flex;
+  color: white;
+  padding: 20px;
+  font-weight: 600;
+  font-size: 20px;
 }
 
 .App-logo {
@@ -41,6 +50,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
